removed client logo and search bar

--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
 </head>
 <body>
     <div id="marketplace-wrapper">
-        <div id="marketplace-logo">
-            <img src="/media/2people-logo.png" alt="">
-        </div>
-        <input id="marketplace-search" type="text" placeholder="Search..">
         <div id="marketplace-filters-container">
             <div id="filters">
-                    <span class="headline">Kategori</span>
+                    <span class="headline">Kategorier</span>
                     <br>
                     <input type="checkbox" name="type" value="konsulenter" id="p1">
                     <label for="p1">Konsulenter</label>
@@ -33,10 +29,10 @@
             </div>
         </div>
             <ul id="marketplace-partners">
-                <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/einfach-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
-                <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/persondata-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
-                <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/hrsupporten-logo.jpg" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
                 <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/comita-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
+                <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/hrsupporten-logo.jpg" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
+                <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/Persondata-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
+                <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/einfach-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
                 <li class="p-class" data-type="rekruttering"><div class="partner-logo"><img src="media/nextt-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
                 <li class="p-class" data-type="trivsel"><div class="partner-logo"><img src="media/aagaard-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
                 <li class="p-class" data-type="integrationer"><div class="partner-logo"><img src="media/proloen-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
