added start/end comments

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>2people HR Marketplace</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <!-- Start of marketplace section -->
     <div id="marketplace-wrapper">
+
+        <!-- Start of filters -->
         <div id="marketplace-filters-container">
             <div id="filters">
                     <span class="headline">Kategorier</span>
@@ -28,17 +32,24 @@
                     <br/>
             </div>
         </div>
-            <ul id="marketplace-partners">
-                <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/comita-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
-                <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/hrsupporten-logo.jpg" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
-                <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/Persondata-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
-                <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/einfach-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
-                <li class="p-class" data-type="rekruttering"><div class="partner-logo"><img src="media/nextt-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
-                <li class="p-class" data-type="trivsel"><div class="partner-logo"><img src="media/aagaard-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
-                <li class="p-class" data-type="integrationer"><div class="partner-logo"><img src="media/proloen-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
-                <li class="p-class" data-type="integrationer"><div class="partner-logo"><img src="media/gratisal-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
-            </ul>
+        <!-- End of filters -->
+
+        <!-- Start of partner boxes -->
+        <ul id="marketplace-partners">
+            <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/comita-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
+            <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/hrsupporten-logo.jpg" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
+            <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/Persondata-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
+            <li class="p-class" data-type="konsulenter"><div class="partner-logo"><img src="media/einfach-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
+            <li class="p-class" data-type="rekruttering"><div class="partner-logo"><img src="media/nextt-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
+            <li class="p-class" data-type="trivsel"><div class="partner-logo"><img src="media/aagaard-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
+            <li class="p-class" data-type="integrationer"><div class="partner-logo"><img src="media/proloen-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
+            <li class="p-class" data-type="integrationer"><div class="partner-logo"><img src="media/gratisal-logo.png" alt=""></div><hr><div class="partner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo id aut impedit saepe repellat sapiente optio ea voluptatum. Iste eligendi ad odit.</div></li>
+        </ul>
+        <!-- End of partner boxes -->
+
     </div>
+    <!-- End of marketplace section -->
+    
     <script src="script.js"></script>
 </body>
 </html>
