mobile version filters

--- a/index.html
+++ b/index.html
@@ -18,18 +18,26 @@
             <div id="filters">
                     <span class="headline">Kategorier</span>
                     <br>
+                    <div>
                     <input type="checkbox" name="type" value="konsulenter" id="p1">
-                    <label for="p1">Konsulenter</label>
+                    <label for="p1" class="filter-left">Konsulenter</label>
                     <br/>
+                    </div>
+                    <div>
                     <input type="checkbox" name="type" value="integrationer" id="p2">
-                    <label for="p2">Integrationer</label>
+                    <label for="p2" class="filter-left">Integrationer</label>
                     <br/>
+                    </div>
+                    <div>
                     <input type="checkbox" name="type" value="rekruttering" id="p3">
-                    <label for="p3">Rekruttering</label>
+                    <label for="p3" class="filter-right">Rekruttering</label>
                     <br/>
+                    </div>
+                    <div>
                     <input type="checkbox" name="type" value="trivsel" id="p4">
-                    <label for="p4">Trivsel</label>
+                    <label for="p4" class="filter-right">Trivsel</label>
                     <br/>
+                </div>
             </div>
         </div>
         <!-- End of filters -->
